WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152339
[mac-wk2] fast/events force click tests crashing
https://bugs.webkit.org/show_bug.cgi?id=152339
Summary
[mac-wk2] fast/events force click tests crashing
Ryan Haddad
Reported
2015-12-16 09:15:43 PST
[mac-wk2] fast/events force click tests crashing fast/events/cancelled-force-click-link-navigation.html fast/events/force-click-link-selection-behavior.html fast/events/force-click-on-link-navigation.html fast/events/force-click-text-selection-behavior.html Crash log: <
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r194143%20(1965)/fast/events/cancelled-force-click-link-navigation-crash-log.txt
> Run: <
https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20%28Tests%29/builds/1951
> Seems to have started with <
https://trac.webkit.org/changeset/194125
>
Attachments
Patch
(1.50 KB, patch)
2015-12-16 10:29 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-12-16 10:03:03 PST
The fake events from WKTR are TOO FAKE for AppKit :D
Tim Horton
Comment 2
2015-12-16 10:25:06 PST
I have some ideas about how to fix this, so taking.
Tim Horton
Comment 3
2015-12-16 10:29:31 PST
Created
attachment 267466
[details]
Patch
Tim Horton
Comment 4
2015-12-16 10:33:14 PST
http://trac.webkit.org/changeset/194157
We'll need to keep an eye on this since it is a semi-speculative fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug