[mac-wk2] fast/events force click tests crashing https://bugs.webkit.org/show_bug.cgi?id=152339

Reviewed by Beth Dakin.

* WebKitTestRunner/mac/EventSenderProxy.mm:
(-[EventSenderSyntheticEvent initPressureEventAtLocation:globalLocation:stage:pressure:stageTransition:phase:time:eventNumber:window:]):
Set the NSEvent's _type member in addition to overriding -type,
because there are assertions in touch event handling code that depend on it.


Canonical link: https://commits.webkit.org/170461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194157 268f45cc-cd09-0410-ab3c-d52691b4dbfc